<resources>
    <string name="app_name">Duty Helper</string>
    <string name="action_settings">Settings</string>
    <string name="loginToggle">Already a member? Login</string>
    <string name="createAccountButton">Create Account</string>
    <string name="nameHint">Name</string>
    <string name="loginButton">Login</string>
    <string name="createAccountText">No account yet? Create one</string>


    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="start">Start</string>
    <string name="title_screen1">Chores</string>
    <string name="desc_screen1">Create, and assign resources to chores</string>
    <string name="title_screen2">Tasks</string>
    <string name="desc_screen2">See the tasks assigned to you</string>
    <string name="title_screen3">House Members</string>
    <string name="desc_screen3">Assign tasks to, and see house members</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="loading">Loading…</string>

    <!-- Strings related to Bottom Navigation Bar -->
    <string name="calender">Calender</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="create">Create</string>
    <string name="tasks">Tasks</string>
    <string name="title_activity_profile_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="signupLink">No account yet? Create one here!</string>
    <string name="emailHint">Email</string>
    <string name="passwordHint">Password</string>
    <string name="prompt_Age">Age</string>
    <string name="prompt_address">Address</string>
    <string name="prompt_number">Mobile Number</string>
    <string name="pickDate">Pick a Date</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="nextWeek">Next Week</string>
    <string name="doNow">Do it Now!</string>
    <string name="recurringEvent">Recurring Event?</string>
    <string name="taskHint">Type in your task...</string>
</resources>
