<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.mohammedabu.dutyhelper.Authentication.Login"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        android:paddingRight="16dp"
        android:paddingLeft="16dp">


    <LinearLayout
        android:layout_width="336dp"
        android:layout_height="519dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.694"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.572">

        <ImageView
            android:id="@+id/tv_logo"
            android:layout_width="match_parent"
            android:layout_height="184dp"
            app:srcCompat="@drawable/logo5" />

        <TextView
            android:id="@+id/tv_companyName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Duty Helper"
            android:textAllCaps="false"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="25dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <EditText
            android:id="@+id/userEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/emailHint"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/background_dark"
            android:textColorHint="#f3252424" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <EditText
            android:id="@+id/userPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/passwordHint"
            android:inputType="textPassword"
            android:textColor="@android:color/background_dark"
            android:textColorHint="#f3252424" />


        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <Button
            android:id="@+id/tvLogin"
            style="@style/button_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_activity_login" />


        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:id="@+id/tv_SignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/signupLink"
            android:textColor="@android:color/holo_orange_dark" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
